// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt List default 1`] = `
<ul class="e-bolt-list">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - display: horizontal 1`] = `
<ul class="e-bolt-list e-bolt-list--display-horizontal">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - display: horizontal@medium 1`] = `
<ul class="e-bolt-list e-bolt-list--display-horizontal@medium">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - display: horizontal@small 1`] = `
<ul class="e-bolt-list e-bolt-list--display-horizontal@small">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - display: horizontal@xsmall 1`] = `
<ul class="e-bolt-list e-bolt-list--display-horizontal@xsmall">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - display: horizontal@xxsmall 1`] = `
<ul class="e-bolt-list e-bolt-list--display-horizontal@xxsmall">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - display: vertical 1`] = `
<ul class="e-bolt-list">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - horizontal align: center 1`] = `
<ul class="e-bolt-list e-bolt-list--align-center">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - horizontal align: end 1`] = `
<ul class="e-bolt-list e-bolt-list--align-end">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - horizontal align: justify 1`] = `
<ul class="e-bolt-list e-bolt-list--align-justify">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - horizontal align: start 1`] = `
<ul class="e-bolt-list">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - inset: false 1`] = `
<ul class="e-bolt-list">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - inset: true 1`] = `
<ul class="e-bolt-list e-bolt-list--inset">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - no wrapping: false 1`] = `
<ul class="e-bolt-list">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - no wrapping: true 1`] = `
<ul class="e-bolt-list e-bolt-list--nowrap">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - separator: dashed 1`] = `
<ul class="e-bolt-list e-bolt-list--separator-dashed">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - separator: none 1`] = `
<ul class="e-bolt-list">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - separator: solid 1`] = `
<ul class="e-bolt-list e-bolt-list--separator-solid">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - spacing: large 1`] = `
<ul class="e-bolt-list e-bolt-list--spacing-large">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - spacing: medium 1`] = `
<ul class="e-bolt-list e-bolt-list--spacing-medium">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - spacing: none 1`] = `
<ul class="e-bolt-list e-bolt-list--spacing-none">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - spacing: small 1`] = `
<ul class="e-bolt-list e-bolt-list--spacing-small">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - spacing: xlarge 1`] = `
<ul class="e-bolt-list e-bolt-list--spacing-xlarge">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - spacing: xsmall 1`] = `
<ul class="e-bolt-list">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - spacing: xxsmall 1`] = `
<ul class="e-bolt-list e-bolt-list--spacing-xxsmall">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - tag: ol 1`] = `
<ol class="e-bolt-list">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ol>
`;

exports[`Bolt List prop - tag: ul 1`] = `
<ul class="e-bolt-list">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - vertical align: center 1`] = `
<ul class="e-bolt-list">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - vertical align: end 1`] = `
<ul class="e-bolt-list e-bolt-list--valign-end">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;

exports[`Bolt List prop - vertical align: start 1`] = `
<ul class="e-bolt-list e-bolt-list--valign-start">
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
  <li>
    This is a list item
  </li>
</ul>
`;
